--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "baseUrl": "./",
     "paths": {
       "@utils/*": ["./src/contains/utils/*"]
-    }
+    },
+    "strict": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
