--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16
-        cache: 'npm'
+        cache: 'yarn'
     - name: Install dependencies
       run: yarn install --frozen-lockfile
     - name: Run tests
