--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,16 +14,28 @@ jobs:
   test-and-lint:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout branch at $GITHUB_WORKSPACE
-      uses: actions/checkout@v3
-    - name: Use Node.js 16
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
-        cache: 'yarn'
-    - name: Install dependencies
-      run: yarn install --frozen-lockfile
-    - name: Run tests
-      run: yarn run test
-    - name: Run eslint
-      run: yarn run lint
+      - name: Checkout branch at $GITHUB_WORKSPACE
+        uses: actions/checkout@v3
+      - name: Use Node.js 16
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'yarn'
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Run tests
+        run: yarn run test
+      - name: Run eslint
+        run: yarn run lint
+  push-bitbucket:
+    runs-on: ubuntu-latest
+    needs: test-and-lint
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: yesolutions/mirror-action@master
+        with:
+          REMOTE: ${{secrets.BITBUCKET_REMOTE_SSH_GIT}}
+          GIT_SSH_PRIVATE_KEY: ${{ secrets.BITBUCKET_MIRROR_SSH_PRIVATE_KEY }}
+          GIT_SSH_KNOWN_HOSTS: ${{ secrets.BITBUCKET_MIRROR_SSH_KNOWN_HOSTS }}
