--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           REMOTE: ${{secrets.BITBUCKET_REMOTE_SSH_GIT}}
           GIT_SSH_PRIVATE_KEY: ${{ secrets.BITBUCKET_MIRROR_SSH_PRIVATE_KEY }}
-          GIT_SSH_KNOWN_HOSTS: ${{ secrets.BITBUCKET_MIRROR_SSH_KNOWN_HOSTS }}
+          GIT_SSH_NO_VERIFY_HOST: "true"
