--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.7.1",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.9.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.4.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
@@ -40,6 +43,7 @@
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.4",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
