--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,6 @@
 # This configuration file tells GraphQL Code Generator how
 # to generate types based on our schema.
-schema: './src/routes/graphql/typeDefs.gql'
+schema: './src/graphql/typeDefs.gql'
 generates:
   # Specify where our generated types should live.
   ./src/types/resolverTypes.ts:
@@ -10,4 +10,7 @@ generates:
     config:
       useIndexSignature: true
       # More on this below!
-      contextType: './#GraphqlContext'
+      contextType: './context#GraphqlContext'
+      mappers:
+        Book: './models#BookData'
+        Genre: './models#GenreData'
