--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,8 @@ on:
   pull_request:
     branches:
       - master
+    types:
+      - 'closed'
 
 jobs:
   test-and-lint:
@@ -30,6 +32,7 @@ jobs:
   push-bitbucket:
     runs-on: ubuntu-latest
     needs: test-and-lint
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -38,4 +41,4 @@ jobs:
         with:
           REMOTE: ${{secrets.BITBUCKET_REMOTE_SSH_GIT}}
           GIT_SSH_PRIVATE_KEY: ${{ secrets.BITBUCKET_MIRROR_SSH_PRIVATE_KEY }}
-          GIT_SSH_NO_VERIFY_HOST: "true"
+          GIT_SSH_NO_VERIFY_HOST: 'true'
