--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src/**/*.ts --fix",
     "prepare": "husky install",
     "generate": "graphql-codegen --config codegen.yml",
-    "copy": "copyfiles --flat src/graphql/*.gql dist/graphql/",
+    "copy": "copyfiles --flat src/graphql/*.gql dist/src/graphql/",
     "build": "tsc && npm run copy"
   },
   "keywords": [
@@ -23,17 +23,21 @@
     "@apollo/server": "^4.9.0",
     "@godaddy/terminus": "^4.12.1",
     "@graphql-tools/utils": "^10.0.4",
+    "@types/graphql-upload": "15.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.7.1",
+    "graphql-upload": "15.0.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
     "moment": "^2.29.4",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "url": "^0.11.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
@@ -61,6 +65,9 @@
     "typescript": "^5.1.6"
   },
   "lint-staged": {
-    "*.ts": "prettier --write"
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write -u"
+    ]
   }
 }
