fix: fix asset not found on image route

--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
   },
   "lint-staged": {
     "*.ts": [
-      "eslint --fix",
-      "prettier --write -u"
+      "prettier --write "
     ]
   }
 }
