--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,8 @@ on:
       - feat/*
       - fix/*
       - chore/*
-  pull_request:
+      - master
+  pull_request_target:
     branches:
       - master
     types:
@@ -32,7 +33,7 @@ jobs:
   push-bitbucket:
     runs-on: ubuntu-latest
     needs: test-and-lint
-    if: github.ref == 'refs/heads/master'
+    if: startsWith(github.head_ref, 'master')
     steps:
       - uses: actions/checkout@v3
         with:
