chore: refactor code for graphql, models, services

--- a/codegen.yml
+++ b/codegen.yml
@@ -12,5 +12,5 @@ generates:
       # More on this below!
       contextType: './context#GraphqlContext'
       mappers:
-        Book: './models#BookData'
-        Genre: './models#GenreData'
+        Book: './data#BookData'
+        Genre: './data#GenreData'
