--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/graphql-upload": "15.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "escape-string-regexp": "4.0.0",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.7.1",
