--- a/codegen.yml
+++ b/codegen.yml
@@ -14,3 +14,5 @@ generates:
       mappers:
         Book: './data#BookData'
         Genre: './data#GenreData'
+        Author: './data#AuthorDataAfterPopulated'
+        User: './data#UserDataAfterPopulated'
