--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       DOCKER: true
       ENV: DEV
       SERVER_PORT: 8080
+      SERVER_URL: http://localhost:8080
       MONGODB_URL: mongodb://mongo:27017/
       MONGODB_DBNAME: book-review-db
       MONGODB_USER: *mongo_user
