--- a/.github/workflows/test_ssh.yml
+++ b/.github/workflows/test_ssh.yml
@@ -26,6 +26,7 @@ jobs:
           script: |
             cd ~/projects/book-review-graphql-BE/ &&
             echo $BRANCH_NAME &&
+            git pull origin $BRANCH_NAME &&
             bash -s < .github/workflows/script.sh
             SCRIPT_STATUS=$? &&
             if [[ $SCRIP_STATUS != 0 ]]; then exit $DEPLOYMENT_STATUS ; fi
