--- a/.github/workflows/test_ssh.yml
+++ b/.github/workflows/test_ssh.yml
@@ -22,7 +22,7 @@ jobs:
           key: ${{secrets.SSH_PRIVATE_KEY}}
           allenvs: true
           debug: true
-          envs_format: 'export {NAME}={VALUE}'
+        #   envs_format: 'export {NAME}={VALUE}'
           script: |
             cd ~/projects/book-review-graphql-BE/ 
             echo "BRANCH_NAME FROM OUTER" $BRANCH_NAME 
